@@ -334,13 +334,6 @@ be_sequence::managed_type (void)
               be_predefined_type * const bpd =
                 be_predefined_type::narrow_from_decl (prim_type);
 
-              if (!bt)
-                ACE_ERROR_RETURN ((LM_ERROR,
-                                   "TAO_IDL (%N:%l) "
-                                   "be_predefined_type::narrow_from_decl "
-                                   "failed\n"),
-                                  be_sequence::MNG_UNKNOWN);
-
               AST_PredefinedType::PredefinedType pt = bpd->pt ();
 
               switch (pt)
